[package]
name = "schnauzer"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arsynth/schnauzer"
keywords = ["macho", "mach-o", "parser", "otool", "stab"]
categories = ["command-line-interface", "parsing"]
description = "Library for parsing Mach-O files"
exclude = [
    "testable/*"
]

[[bin]]
name = "schnauzer"
required-features = ["cli"]

[dependencies]
scroll = { version = "0.11.0", features = ["derive"] }
uuid = "1.6.1"
schnauzer-derive = { version = "0.1.0", path = "schnauzer-derive" }

colored = { version = "2.1.0", optional = true }
getopts = { version = "0.2.21", optional = true }
kex = { version = "0.2.6", optional = true }

[features]
default = []
cli = ["colored", "getopts", "kex"]
